# gnost

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  ONBOARD.md  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: publish-pypi.yml  tests.yml
docs/: analyze.rst  analyzer_guide.rst  conf.py  index.rst  onboard.rst
flow/: FLOW-full.md  FLOW-full.mmd  FLOW-overview.mmd  entry-paths.md  folder-paths.md
gnost/: cli.py
gnost/analysis/analyzers/: __init__.py  maintainability_analyzer.py  observability_analyzer.py  readability_analyzer.py  robustness_analyzer.py
gnost/analysis/core/: aggregator.py  engine.py  interfaces.py  tool_runner.py  transformers.py
gnost/analysis/utils/: df_handling.py  extract.py  mi.py
gnost/cli/: app.py
gnost/cli/commands/: analysis.py  onboard.py
gnost/config/: languages.py
gnost/core/: counter.py  flow.py  graph.py  insight_builder.py  ranker.py
gnost/languages/: base.py  javascript.py
gnost/models/: insights.py
gnost/plugins/: base.py
gnost/reporters/: __init__.py  analysis_html.py  markdown.py  mermaid.py  readme.py  summary.py
gnost/reporters/templates/: analyzer_guides.json  analyzer_guides_layout.html
gnost/scanner/: __init__.py  engine.py  filters.py  loc.py
gnost/utils/: logger.py  printer.py
tests/: test_analysis_cli.py  test_markdown_reporter.py  test_onboard_paths.py
